@@ -1,5 +1,8 @@
 Change Log
 
+20180724 SCL
+- added RELAY_AUTO_PWM code - not tested - needs PWM-capable pin to function
+	
 20180523 SCL
 - when RTC not defined, g++ bug pops out:
 	open_evse:2384: error: unable to find a register to spill in class 'NO_REGS'
